--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -7,5 +7,11 @@ wheels/
 *.egg-info
 .python-version
 
+# Log files
+/app/logs
+
 # Virtual environments
 .venv
+# Env files
+.env
+/app/logs/archives/
