--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^13.0.0",
+    "axios": "^1.8.4",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.1",
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.9",
@@ -32,6 +35,7 @@
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.16",
     "cypress": "^14.1.0",
     "eslint": "^9.21.0",
     "eslint-plugin-cypress": "^4.2.0",
@@ -39,8 +43,10 @@
     "jiti": "^2.4.2",
     "jsdom": "^26.0.0",
     "npm-run-all2": "^7.0.2",
+    "postcss": "^8.4.35",
     "prettier": "3.5.3",
     "start-server-and-test": "^2.0.10",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.8.0",
     "vite": "^6.2.1",
     "vite-plugin-vue-devtools": "^7.7.2",
