fix-all: 修复用户接口权限认证失败导致普通用户可以对该接口功能进行操作+修复角色更新ui和接口冗余传输字段修复

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ node_modules/
 /playwright-report/
 /blob-report/
 /playwright/.cache/
+/backend/.cursor/rules/01-project-overview.mdc
+/backend/.cursor/rules/02-api-routers.mdc
+/backend/.cursor/rules/03-core-components.mdc
+/backend/.cursor/rules/04-application-settings.mdc
+/backend/.cursor/rules/05-application-lifecycle.mdc
