--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "@vueuse/core": "^13.0.0",
     "axios": "^1.8.4",
+    "element-plus": "^2.10.2",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
