feat-backend：更新README

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -20,3 +20,4 @@ wheels/
 /static/49cb521a-09a2-4274-a29f-a7c31a7d0db4.jpg
 /static/f24f9a2f-5f46-487c-8514-85fb30fd2bea.jpg
 /.claude/settings.local.json
+/TECHNICAL_EVALUATION.md
